// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrimaryButton /> renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FA4D09",
        "borderRadius": 100,
        "justifyContent": "center",
        "opacity": 1,
        "padding": 32.14285714285714,
        "paddingHorizontal": 171.42857142857142,
        "width": "auto",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 38.57142857142857,
          },
          {
            "fontWeight": "500",
          },
        ]
      }
    >
      Enviar
    </Text>
  </View>
</View>
`;

exports[`<PrimaryButton loading /> renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FA4D09",
        "borderRadius": 100,
        "justifyContent": "center",
        "opacity": 1,
        "padding": 32.14285714285714,
        "paddingHorizontal": 171.42857142857142,
        "width": "auto",
      }
    }
  >
    <ActivityIndicator
      color="#FFFFFF"
    />
  </View>
</View>
`;
